# EvolutionarySimulator

./: .gitattributes  .gitignore  .gitignore-web  CMakeLists.txt  README.md  cmake_xcode_command.sh  emc_full_build.sh  full_build.sh  index.html  publish_web.sh  run_make.sh  run_test_web_server.sh
imgui/: imgui_internal.h
src/: main  main.cpp  main_sdl_renderer.cpp
src/evolution/: BreedingManager.cpp  BreedingManager.h  Generation.cpp  Generation.h  Species.cpp  Species.h
src/game/: Game.h  SnakeGame.cpp  SnakeGame.h  XORGame.cpp  XORGame.h
src/graphics/: GraphicsManager.cpp  GraphicsManager.h  GraphicsWindow.h  NetworkPickerWindow.cpp  NetworkPickerWindow.h  NetworkRenderer.cpp  NetworkRenderer.h  SnakeGameRenderer.cpp  SnakeGameRenderer.h
src/gui/: GUIManager.cpp  GUIManager.h  GraphicsManager.cpp  GraphicsManager.h
src/network/: Connection.cpp  Connection.h  Gene.cpp  Gene.h  InnovationNumberManager.cpp  InnovationNumberManager.h  Network.cpp  Network.h  NetworkBreeder.cpp  NetworkBreeder.h  NetworkInstance.cpp  NetworkInstance.h  Neuron.cpp  Neuron.h  NewGeneCreator.cpp  NewGeneCreator.h
src/utils/: RandomGenerator.cpp  RandomGenerator.h
testing/: index.html  server.py
